add minimal example for showing an image

--- a/lesson-1/notebooks/3.model.ipynb
+++ b/lesson-1/notebooks/3.model.ipynb
@@ -79,8 +79,33 @@
    "outputs": [],
    "source": [
     "import seaborn as sns\n",
-    "sns.scatterplot(x=X[:, 0], y=X[:, 1], hue=labels)"
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "plt.figure(figsize=(10, 10))\n",
+    "sns.scatterplot(x=X[:, 0], y=X[:, 1], hue=labels)\n",
+    "\n",
+    "imgdir = Path(\"../img\")\n",
+    "if not imgdir.exists():\n",
+    "    print(f\"Creating directory {imgdir}\")\n",
+    "    imgdir.mkdir(parents=True)\n",
+    "\n",
+    "imgfile = imgdir / Path(\"clustering.png\")\n",
+    "plt.savefig(imgfile)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
